examples/spork/failing/method_visibility_left_empty/ExpectedCurrently.java
class Cls {
    final protected static void method() {}
}
